--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>João Carlos Vieira Filho</h1>
-    <img src="Fotenha tomando café.png" width="300" alt="Foto minha tomando café">
-   <p>Abra esta foto <a href="Fotenha tomando café.png">clicando aqui </a> </p> 
+    <img src="fotenha_tomando_cafe.png" width="300" alt="Foto minha tomando café">
+   <p>Abra esta foto <a href="fotenha_tomando_cafe.png">clicando aqui </a> </p> 
     <!--tinha uma fotinha melhor não ???/-->
 
  <!--Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;-->
@@ -37,17 +37,18 @@
  <!--Um índice com links internos para as diferentes seções do seu portfólio.-->
 <a href="port/IOT/landing.html">
     <h4>INTERNET DAS COISAS</h4>
-    <img src="interna/IOT.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
+    <img src="interna/iot.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
 <a href="port/BLOC/landing.html">
    <h4>APLICAÇÕES EM BLOCKCHAIN</h4> </a>
-   <img src="interna/Blockchain.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
+   <img src="interna/blockchain.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
    <a href="port/DEFI/landing.html">
    <h4>FINANÇAS DESCENTRALIZADAS</h4>
-    <img src="interna/DE-FI.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
+    <img src="interna/defi.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
     <a href="port/MOB/landing.html">
     <h4>APLICATIVOS MOBILE</h4>
-    <img src="interna/MOB.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
+    <img src="interna/mob.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
 
   </body>
+
 </html>
 
