Aplicado estilo CSS2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Portifólio de João, em construção!!!</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+
+    </style>
+
   </head>
   <body>
     <h1>João Carlos Vieira Filho</h1>
@@ -11,9 +16,9 @@
     <!--tinha uma fotinha melhor não ???/-->
 
  <!--Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;-->
- <p> I'm Brazilian but no, I afraid I can't dance any samba</p>
+ <p> I'm <strong>brazilian</strong> but no, I afraid I can't dance any samba</p>
 <p> Eu tava lá trabalhando na manutenção de helicopteros em 
-    São Paulo e achei que aquilo não era desafiador o bastante, agora estou aqui nessa doce aventura que é a <Strong> Trybe </Strong> </p>
+  <strong>São Paulo</strong> e achei que aquilo não era desafiador o bastante, agora estou aqui nessa doce aventura que é a <Strong> Trybe </Strong> </p>
 <P> <i>  "Prefiero disculparme que pedir permiso" </i> </P>
 <h4> "diga me com quem andas que eu te direi quem es" <a href="interna/index.html"> Conheça meus Amigos da Trybe! <a> </h4> 
 
