estrutura de files mudada

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p> Eu tava lá trabalhando na manutenção de helicopteros em 
   <strong>São Paulo</strong> e achei que aquilo não era desafiador o bastante, agora estou aqui nessa doce aventura que é a <Strong> Trybe </Strong> </p>
 <P> <i>  "Prefiero disculparme que pedir permiso" </i> </P>
-<h4> "diga me com quem andas que eu te direi quem es" <a href="interna/index.html"> Conheça meus Amigos da Trybe! <a> </h4> 
+<h4> "diga me com quem andas que eu te direi quem es" <a href="amigos.html"> Conheça meus Amigos da Trybe! <a> </h4> 
 
         <!--Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha-->
 
@@ -42,16 +42,16 @@
  <!--Um índice com links internos para as diferentes seções do seu portfólio.-->
 <a href="port/IOT/landing.html">
     <h4>INTERNET DAS COISAS</h4>
-    <img src="interna/iot.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
+    <img src="it.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
 <a href="port/BLOC/landing.html">
    <h4>APLICAÇÕES EM BLOCKCHAIN</h4> </a>
-   <img src="interna/blockchain.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
+   <img src="bc.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
    <a href="port/DEFI/landing.html">
    <h4>FINANÇAS DESCENTRALIZADAS</h4>
-    <img src="interna/defi.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
+    <img src="defi.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
     <a href="port/MOB/landing.html">
     <h4>APLICATIVOS MOBILE</h4>
-    <img src="interna/mob.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
+    <img src="mb.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
 
   </body>
 
