aplicado box model

--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
 
   </head>
   <body>
+    <div class="centralizador">
+    <div class= "nome">
     <h1>João Carlos Vieira Filho</h1>
-    <img src="fotenha_tomando_cafe.png" width="300" alt="Foto minha tomando café">
-   <p>Abra esta foto <a href="fotenha_tomando_cafe.png">clicando aqui </a> </p> 
+  </div>
+<div class="intro">
+    
+       <a  class="foto" href="fotenha_tomando_cafe.png">  <img class="foto" src="fotenha_tomando_cafe.png" width="300" alt="Foto minha tomando café"> </a>
     <!--tinha uma fotinha melhor não ???/-->
 
- <!--Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;-->
- <p> I'm <strong>brazilian</strong> but no, I afraid I can't dance any samba</p>
-<p> Eu tava lá trabalhando na manutenção de helicopteros em 
-  <strong>São Paulo</strong> e achei que aquilo não era desafiador o bastante, agora estou aqui nessa doce aventura que é a <Strong> Trybe </Strong> </p>
-<P> <i>  "Prefiero disculparme que pedir permiso" </i> </P>
-<h4> "diga me com quem andas que eu te direi quem es" <a href="amigos.html"> Conheça meus Amigos da Trybe! <a> </h4> 
 
-        <!--Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha-->
+<div class="conteiner_texto">
+ <!--Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;-->
+ <p> I'm <strong> <a href="https://en.wikipedia.org/wiki/Brazil" > brazilian </a> </strong> but no, I afraid I can't dance any samba</p>
+<p> Eu tava lá trabalhando na manutenção de helicopteros em 
+  <strong> <a href="https://wikitravel.org/en/S%C3%A3o_Paulo"> São Paulo </a></strong> e achei que aquilo não era desafiador o bastante, agora estou aqui nessa doce aventura que é a <Strong> <a href="https://www.betrybe.com/"> Trybe</a> </Strong> </p>
+<P> <i>  "Prefiero disculparme que pedir permiso" </i> </P>
+<p> "diga me com quem andas que eu te direi quem es" <a href="amigos.html"> Conheça meus Amigos da Trybe! <a> </p> 
+</div>
+
+</div>  <!--Fim classe intro-->
+
+<div class="lista">
+          <!--Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha-->
+
+
 
 <H2>Se for me contratar, esteja avisado que:</H2>
 <ul>
@@ -32,24 +44,38 @@
 <Li>Se for falar de Star Wars comigo vou asentir com a cabeça como se estivesse entendendo tudo. <strong>(olha que soft skill !!!!)</strong> </li>
 <li> Adoro um suco de ironia, mas guardo para os momentos apropriados, na misssão é só respeito e empatia e assetrtividade!</li>
 </ul>
-
+</div>
 <p> Tá ai um blog pra ter assunto e parecer mega inteligente.<a href=" https://towardsdatascience.com/" target="_Blank">Towards Data Scence </a></p>
+
+</div>  <!--Fim classe lista-->
 
 <H2>and now, the good staff</H2>
 
- <!--Um índice com links internos para as diferentes seções do seu portfólio.-->
-<a href="port/IOT/landing.html">
-    <h4>INTERNET DAS COISAS</h4>
-    <img src="it.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
-<a href="port/BLOC/landing.html">
-   <h4>APLICAÇÕES EM BLOCKCHAIN</h4> </a>
-   <img src="bc.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
-   <a href="port/DEFI/landing.html">
-   <h4>FINANÇAS DESCENTRALIZADAS</h4>
-    <img src="defi.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
-    <a href="port/MOB/landing.html">
-    <h4>APLICATIVOS MOBILE</h4>
-    <img src="mb.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
+  <!--Um índice com links internos para as diferentes seções do seu portfólio.-->
+
+  <div class="portfolio">
+    <!--Um índice com links internos para as diferentes seções do seu portfólio.-->
+  
+    <div classe="left">
+  <a href="port/IOT/landing.html">
+      <h4>INTERNET DAS COISAS</h4>
+      <img src="it.png" width="300" height="150" alt="INTERNET DAS COISAS"></a>
+  <a href="port/BLOC/landing.html">
+     <h4>APLICAÇÕES EM BLOCKCHAIN</h4> </a>
+     <img src="bc.jpeg" width="300" height="150" alt="APLICAÇÕES EM BLOCKCHAIN">
+    </div>
+     
+     <div class="right">
+     <a href="port/DEFI/landing.html">
+     <h4>FINANÇAS DESCENTRALIZADAS</h4>
+      <img src="defi.jpeg" width="300" height="150" alt="FINANÇAS DESCENTRALIZADAS"> </a>
+      <a href="port/MOB/landing.html">
+      <h4>APLICATIVOS MOBILE</h4>
+      <img src="mb.png" width="300" height="150" alt="APLICATIVOS MOBILE"> </a>
+    </div>
+  
+    </div>  <!--Fim classe portfolio-->
+  </div>
 
   </body>
 
